--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>TodoApp</title>
     <link href="https://fonts.googleapis.com/css2?family=Grenze+Gotisch:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./index.css">
+    <script src="https://www.gstatic.com/firebasejs/7.17.2/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.17.2/firebase-database.js"></script>
+
 </head>
 
 <body>
